2019-08-12  Richard Biener  <rguenther@suse.de>

PR lto/91375
	* tree.c (free_lang_data_in_type): Do not free TYPE_BINFO dependent on
	flag_devirtualize.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@274310 138bc75d-0d04-0410-961f-82ee72b054a4